--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,6 +28,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="backdrop-hook"></div>
+  <div class="modal-hook"></div>
   <div id="header-drawer"></div>
   <div id="root"></div>
   <!--
