--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,6 +42,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC23Z9f8SaswH47wtN1Morj7JJ04ofF1yg&callback=initMap&v=weekly"
+    defer></script>
 </body>
 
 </html>
