Add functionality to view the map of a certain place

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,8 +12,6 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" rel="stylesheet" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -42,9 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC23Z9f8SaswH47wtN1Morj7JJ04ofF1yg&callback=initMap&v=weekly"
-    defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC23Z9f8SaswH47wtN1Morj7JJ04ofF1yg" defer></script>
 </body>
 
 </html>
